package com.example.tamid_beshvil_hatalmid_try1;

import com.google.firebase.auth.FirebaseAuth;
import com.google.firebase.database.DatabaseReference;
import com.google.firebase.database.FirebaseDatabase;

public class FBRef
{
    public static FirebaseAuth refAuth = FirebaseAuth.getInstance();

    public static FirebaseDatabase FBDB= FirebaseDatabase.getInstance();
    public static DatabaseReference refStudent= FBDB.getReference("Student");
    public static DatabaseReference refTeacher= FBDB.getReference("Teacher");

}
