package com.example.tamid_beshvil_hatalmid_try1;

public interface GeminiCallBack {
    public void OnSuccess(String result);
    public void OnError(Throwable error);

}
